# hcom

./: LICENSE  README.md  build.sh  gemini-extension.json  pyproject-fallback.toml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
plugin/hcom/.claude-plugin/: plugin.json
plugin/hcom/commands/: hcom.md
plugin/hcom/hooks/: hooks.json
src/hcom/: __main__.py  api.py  cli.py  daemon.py  launcher.py  relay.py  shared.py  terminal.py
src/hcom/commands/: __init__.py  admin.py  bundle.py  config_cmd.py  events.py  hooks_cmd.py  lifecycle.py  messaging.py  query.py  relay.py  reset.py  shim.py  term.py  transcript.py  utils.py
src/hcom/commands/lifecycle/: __init__.py  (+6 more)
src/hcom/core/: __init__.py  binary.py  bootstrap.py  config.py  context.py  context_injection.py  db.py  device.py  filters.py  hcom_context.py  helpers.py  hook_payload.py  hook_result.py  identity.py  instances.py  io_capture.py  launch_status.py  log.py  messages.py  ops.py  paths.py  pidtrack.py  runtime.py  settings.py  thread_context.py  timeouts.py  tips.py  tool_utils.py  transcript.py
src/hcom/hooks/: __init__.py  common.py  dispatcher.py  family.py  parent.py  settings.py  subagent.py  utils.py
src/hcom/pty/: __init__.py  claude.py  codex.py  gemini.py  pty_common.py  pty_handler.py  pty_wrapper.py  push_delivery.py
src/hcom/scripts/: __init__.py
src/hcom/tools/: __init__.py  args_common.py
src/hcom/ui/: __init__.py  colors.py  input.py  launch.py  manage.py  rendering.py  tui.py  types.py
src/native/: Cargo.toml
src/native/src/: config.rs  db.rs  delivery.rs  log.rs  main.rs  notify.rs  paths.rs  tool.rs  transcript.rs
src/native/src/client/: connection.rs  daemon.rs  mod.rs  protocol.rs
src/native/src/pty/: inject.rs  mod.rs  screen.rs  terminal.rs
test/: conftest.py  pytest.ini
test/cli/: test_claude_args.py  test_codex_args.py  test_gemini_args.py  test_tool_args_validation_override.py
test/e2e/: test_critical_flows.py  test_smoke.py
test/e2e/hermetic/: __init__.py  harness.py  test_hermetic_e2e.py  test_hermetic_gemini_codex.py  test_hermetic_lifecycle.py  test_hermetic_multiinstance.py  test_hermetic_notify_and_envelope.py
test/integration/: test_bundle.py  test_bundle_cycle.py  test_codex_settings.py  test_gemini_settings.py  test_hooks_property.py  test_state_persistence.py
test/real/: conftest.py  test_pty_delivery.py  test_transcript.py
test/unit/: test_functions.py  test_identity.py  test_identity_roundtrip.py  test_term.py  test_thread_context.py  test_transcript.py  test_validation.py
(+28 files in other folders)
