[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "hcom"
version = "0.6.14"
description = "Realtime messaging and context sharing for AI coding agents (Claude Code, Gemini CLI, Codex)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "aannoo"}]
keywords = ["claude", "claude-code", "gemini", "codex", "hooks", "agents", "cli", "multi-agent", "orchestration", "terminal"]
dependencies = [
    "wcwidth",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/aannoo/hcom"
Repository = "https://github.com/aannoo/hcom"
Issues = "https://github.com/aannoo/hcom/issues"
Documentation = "https://github.com/aannoo/hcom#readme"

[tool.maturin]
bindings = "bin"
manifest-path = "src/native/Cargo.toml"
python-source = "src"
python-packages = ["hcom"]
strip = true
exclude = ["*.egg-info"]

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["W291", "W293"]  # Trailing whitespace (bootstrap.py has intentional formatting)

[tool.ruff.lint.per-file-ignores]
# Intentional lazy imports for fast CLI startup
"src/hcom/cli.py" = ["E402"]
"src/hcom/tools/gemini/settings.py" = ["E402"]
"src/hcom/tools/claude/dispatcher.py" = ["E402"]
